--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>HTML CSS Practice Session</title>
-<link href="css/styles.css" rel="stylesheet" type="text/css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Student Name - Emerging Technology Blog</title>
 </head>
-
 <body>
-
-
-
+    <h1>Emerging Technologies</h1>
+    <main>
+        <!-- sample of a blog post -->
+        <article>
+            <h2>article title here</h2>
+            <img src="" alt="article alt text here">
+            <a href="">Article link here</a>
+            <time>date goes here</time>
+            <p>Summary of the article and the technology it talks about</p>
+        </article>
+        <!-- end of sample -->
+    </main>
 </body>
-
-
 </html>
