--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Name - Emerging Technology Blog</title>
+    <title>Student Name -karishma panwar </title>
 </head>
 <body>
     <h1>Emerging Technologies</h1>
     <main>
         <!-- sample of a blog post -->
         <article>
-            <h2>article title here</h2>
-            <img src="" alt="article alt text here">
-            <a href="">Article link here</a>
-            <time>date goes here</time>
-            <p>Summary of the article and the technology it talks about</p>
+            <h2>robotics</h2>
+            <img src="images/iStock-966248982.jpg" alt="article alt text here">
+            <a href="https://cioreview.medium.com/emerging-technologies-in-robotics-8704914e959e"></a>
+            <time>25/11/22</time>
+            <p>AI, laptop getting to know and robotics are evolving hastily growing questions as 
+                whether or not in future robots will take over human beings or not. Right now, 
+                robots are performing lots of duties and they have unfold in the course of the world.
+                 The thought of growing robots had driven by using the idea of accomplishing the works,
+                  man cannot do. And these days robots have reached at some of the corners that human
+                   cannot</p>
         </article>
         <!-- end of sample -->
     </main>
