--- a/index.html
+++ b/index.html
@@ -4,23 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Name -karishma panwar </title>
+    <title>technology blog</title>
+    <title>student name - emerging technology blog</title>
 </head>
 <body>
-    <h1>Emerging Technologies</h1>
+    <h1>amazing articles i have found</h1>
+    <h1>my name is karishma panwar</h1>
+    <h1>emerging technologies</h1>
     <main>
         <!-- sample of a blog post -->
         <article>
-            <h2>robotics</h2>
+            <h2>Neuroscience</h2>
             <img src="images/iStock-966248982.jpg" alt="article alt text here">
-            <a href="https://cioreview.medium.com/emerging-technologies-in-robotics-8704914e959e"></a>
-            <time>25/11/22</time>
-            <p>AI, laptop getting to know and robotics are evolving hastily growing questions as 
-                whether or not in future robots will take over human beings or not. Right now, 
-                robots are performing lots of duties and they have unfold in the course of the world.
-                 The thought of growing robots had driven by using the idea of accomplishing the works,
-                  man cannot do. And these days robots have reached at some of the corners that human
-                   cannot</p>
+            <a href=https://en.wikipedia.org/wiki/Neuroscience></a>
+            <time>02/12/22</time>
+            <p>Neuroscience is the scientific study of the nervous system (the brain, spinal cord,
+                 and peripheral nervous system), its functions and disorders.[1][2][3] It is a
+                  multidisciplinary science that combines physiology, anatomy, molecular biology,
+                   developmental biology, cytology, psychology, physics, computer science, chemistry,
+                    medicine, statistics, and mathematical modeling to understand the fundamental and
+                     emergent properties of neurons, glia and neural circuits</p>
         </article>
         <!-- end of sample -->
     </main>
