--- a/index.html
+++ b/index.html
@@ -14,16 +14,19 @@
     <main>
         <!-- sample of a blog post -->
         <article>
-            <h2>Neuroscience</h2>
+            <h2>artifical intelligence</h2>
             <img src="images/iStock-966248982.jpg" alt="article alt text here">
-            <a href=https://en.wikipedia.org/wiki/Neuroscience></a>
-            <time>02/12/22</time>
-            <p>Neuroscience is the scientific study of the nervous system (the brain, spinal cord,
-                 and peripheral nervous system), its functions and disorders.[1][2][3] It is a
-                  multidisciplinary science that combines physiology, anatomy, molecular biology,
-                   developmental biology, cytology, psychology, physics, computer science, chemistry,
-                    medicine, statistics, and mathematical modeling to understand the fundamental and
-                     emergent properties of neurons, glia and neural circuits</p>
+            <a href=https://en.wikipedia.org/wiki/Artificial_intelligence></a>
+            <time>09/12/22</time>
+            <p>Artificial intelligence was founded as an academic discipline in 1956, and in the
+                 years since has experienced several waves of optimism,[6][7] followed by disappointment
+                  and the loss of funding (known as an "AI winter"),[8][9] followed by new approaches,
+                   success and renewed funding.[7][10] AI research has tried and discarded many
+                    different approaches since its founding, including simulating the brain, modeling 
+                    human problem solving, formal logic, large databases of knowledge and imitating
+                     animal behavior. In the first decades of the 21st century, highly mathematical-statistical
+                      machine learning has dominated the field, and this technique has proved highly successful,
+                       helping to solve many challenging problems throughout industry and academia</p>
         </article>
         <!-- end of sample -->
     </main>
